Made a couple of tweaks on behalf of wtc@netscape.com to allow control to build when the MS Platform SDK is installed. b=83976 r=adamlock@netscape.com sr/a=blizzard@mozilla.org