embedding/browser/activex/src/control/MozillaBrowser.cpp
@@ -171,7 +171,7 @@ STDMETHODIMP CMozillaBrowser::InterfaceSupportsErrorInfo(REFIID riid)
 	};
 	for (int i=0;i<(sizeof(arr)/sizeof(arr[0]));i++)
 	{
-		if (InlineIsEqualGUID(*arr[i],riid))
+		if (::ATL::InlineIsEqualGUID(*arr[i],riid))
 			return S_OK;
 	}
 	return S_FALSE;
